Hadoop MapReduce Change Log

Trunk (unreleased changes)


    MAPREDUCE-279

    Fix some invalid transitions in the RM. (vinodkv via ddas)
    
    Fix diagnostics display for more than 100 apps in RM. (llu)

    Fix class cast exception in release reserved containers in capacity scheduler (mahadev)

    MAPREDUCE-2615. Make killJob go through AM and fix JobSummaryLog.
    (Siddharth Seth via llu)

    Fix for NPE in YarnChild that was causing lots of tasks to fail. (vinodkv)

    Fix for ConcurrentModification exception while iterating through tokens in
    a UGI in ContainerLauncherImpl. (ddas)

    MAPREDUCE-2611. Fix counters, finish times etc. in job history.
    (Siddharth Seth via llu)

    Fixing scheduling deadlock in AM because of incorrect headRoom values from
    RM. The bug happens when AM releases containers and RM decrements current
    memory usage twice for all those containers. (vinodkv)

    Disabling locality-wait in CapacityScheduler for now to prevent uber-slow
    scheduling for apps with no data-locality constraints (sleep-job like). (vinodkv)

    Fix to schedule reduces irrespective of the headroom when all maps are
    done so as to avoid stall in reduce-scheduling when slow-start is
    disabled. (Sharad Agarwal via vinodkv).

    Fix RM app start/finish time and diagnostics. (llu)

    Fix race condition between multiple localizers on a single node. (cdouglas via mahadev)

    Improve logging for AM when requesting containers to show the right ask 
    and release fields (mahadev)

    Fix NPE when requesting attempts for completed jobs. (Siddharth Seth via llu)

    Changes a couple of usages of FileContext to FileSystem in TaskAttemptImpl 
    to handle distributed cache path resolutions on non-default filesystems.
    (ddas)

    Hack until MAPREDUCE-2365 is fixed to make PIG work with MRV2. (mahadev)

    Bug fix to set correct state on containers so as to avoid duplicate
    containers from RM to AM. (vinodkv)
